add an entity class and play with rocksdb